# designpatterns

./: README.md  REQUIREMENTS.md
2018/alex_margaryan/AbstractFactory/: CriminalFilms.h  HistoryFilms.h  MS_CriminalFilm.h  MS_HistoryFilm.h  MartinScorseseFilms.h  ProducerFactory.h  SS_CriminalFilm.h  SS_HistoryFilm.h  StevenSpielbergFilms.h  main.cpp
2018/alex_margaryan/Bridge/: Cappuccino.h  Coffee.h  Espresso.h  Packaging.h  VacuumSealedBags.h  ValveSealedBags.h  main.cpp
2018/alex_margaryan/Builder/: Bike.h  BikeBuilder.h  CubeBuilder.cpp  CubeBuilder.h  Engineer.h  TrekBuilder.cpp  TrekBuilder.h  main.cpp
2018/liza_razumova/: Adapter-1.cpp  abstract_factory.cpp
2018/lusine_tsarukyan/: BurgersBase.cs  SingletonMain.cs  SingletonPattern.cs  mainFactoryMethod.cs
2018/movses_saryan/: README.md
2018/movses_saryan/src/: BadGuyBase.h  CMakeLists.txt  Censored.h  MainGirlBase.h  MarvelFactoryBase.h  SpidermanClasses.h  SpidermanFactory.cpp  SpidermanFactory.h  SuperHeroBase.h  SupermanFactory.h  marvel.cpp
2019/alex_gasparyan/: AbstractFactory.java  Builder.java  Factory.java  Prototype.java  Singleton.java
2019/narek_harutyunyan/: AbstractFactory.cpp  Adapter.cpp  Builder.cpp  Factory.cpp  Prototype.cpp  Singleton.cpp
2020/tatevik_ishkhanyan/: AbstractFactory.cs  AbstractFactory.sln  Adapter.cs  Bridge.cs  Bridge.sln  ChainOfResponsibility.cs  ChainOfResponsibility.sln  Momento.cs  Momento.sln  Program.cs  adapter.sln
dpcli/: Doxyfile  Makefile  README.md
dpcli/src/: main.cpp
sample_project/trunk/: Doxyfile  Makefile  README.md  tags
(+102 files in other folders)
